--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>WormNet</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <style>
+    body {
+      font-family: Montserrat;
+    }
+    </style>
   </head>
   <body>
     <div id="root"></div>
