--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     </style>
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.1/web-animations-next.min.js"></script>
     <div id="root"></div>
     $bundles
   </body>
